# baseline_fulldisk

./: .gitignore  README.md  check.py  finetune_heliofm.py  inference.py  optimization.py  pyproject.toml
scripts/configs/: __init__.py  arguments.py  config_heliofm.yaml
scripts/data/: 24image_bin_class_test.csv  24image_bin_class_train.csv  labelmaker.py  labelmaker_12min.py
scripts/model/: __init__.py  models.py
scripts/train/: __init__.py  dataloader.py  evaluation.py  sampling.py  traintestloop.py
