[tool.poetry]
name = "baseline-fulldisk"
version = "0.1.0"
description = ""
authors = ["Jinsu Hong <jinsuhong.knight@gmail.com>"]
readme = "README.md"
packages = [{include = "baseline_fulldisk"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
