[tool.poetry]
name = "baseline-fulldisk"
version = "0.1.0"
description = ""
authors = ["Jinsu Hong <jinsuhong.knight@gmail.com>"]
readme = "README.md"
packages = [{include = "baseline_fulldisk"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "1.2.4"
scikit-learn = "1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
